<resources>
    <string name="app_name">Sender&amp;Reciever-A1</string>
    <string name="sender_ndetails">SENDER \nDETAILS</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="contact_information">Contact Information</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="next">NEXT</string>
    <string name="reciever_ndetails">RECIEVER \nDETAILS</string>
    <string name="name">Name</string>
</resources>