<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/red"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reciever_ndetails"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"            >

            <EditText
                android:id="@+id/etREmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"               >

            <EditText
                android:id="@+id/etRName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/full_name"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"               >

            <EditText
                android:id="@+id/etRInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="phone"
                android:hint="@string/contact_information"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"             >

            <EditText
                android:id="@+id/etRCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/country"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"             >

            <EditText
                android:id="@+id/etRAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/address"/>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btnRNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:backgroundTint="@color/red"
            />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>